--- a/display-examples/style.css
+++ b/display-examples/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 body {
@@ -10,10 +11,12 @@ body {
     font-size: 16px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
+    justify-content: center;
 }
 
 h1 {
     background: linear-gradient(40deg,green 0%, purple 30%, red 65%, yellow 90%);
+    background-clip: inherit;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 0.75px rgba(31, 31, 31, 0.5);
@@ -27,55 +30,86 @@ strong {
     font-family: monospace;
 }
 
+a, a:link, a:visited {
+    text-decoration: none;
+    padding: 5px 9px 5px 9px;
+    border-radius: 3px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+a:hover {
+    color: wheat;
+    background: rgb(207, 147, 35);
+    text-shadow: 1px 2px rgb(139, 96, 15);
+}
+
+/* NAVBAR */
+
+.navbar-container {
+    display: flex;
+    width: fit-content;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+    padding: 10px 6px 10px 6px;
+    border-radius: 5px;
+    background: wheat;
+}
+
+.navbar-menu {
+    float: left;
+    padding: 2px;
+}
+
+/* EXAMPLE CONTAINERS */
+
 .block-container {
     display: block;
     text-align: center;
-    outline: 4px solid blue;
+    border: 4px solid rgb(207, 147, 35);
+    border-radius: 5px;
     padding: 10px;
     margin: 10px;
 }
-
-.div-block {
-    background: rgb(194, 106, 106);
-    border: 1px dotted rgb(59, 59, 59);
-}
-
-.div-block:hover {
-    padding: 30px;
-}
-
-.div-inline-block {
-    display: inline-block;
-    background: rgb(106, 194, 187);
-    border: 1px dotted rgb(59, 59, 59);
-}
-
-.div-inline-block:hover {
-    padding: 30px;
-}
-
-.div-inline-flex {
-    display: inline-flex;
-    background: rgb(185, 201, 48);
-    border: 1px dotted rgb(59, 59, 59);
-}
-
-.div-inline-flex:hover {
-    padding: 30px;
-}
-
-.responsive-img {
-    width: 40%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 10px;
-} 
 
 .flex-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    outline: 4px solid blue;
+    border: 4px solid rgb(207, 147, 35);
+    border-radius: 5px;
     padding: 10px;
     margin: 10px;
+}
+
+.responsive-img {
+    width: 35%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+} 
+
+.div-block {
+    background: rgb(194, 106, 106);
+}
+
+.div-inline-block {
+    display: inline-block;
+    background: rgb(106, 194, 187);
+}
+
+.div-inline-flex {
+    display: inline-flex;
+    background: rgb(185, 201, 48);
+}
+
+.div-block, .div-inline-block, .div-inline-flex {
+    border: 1px dotted rgb(59, 59, 59);
+}
+
+.div-block:hover, .div-inline-block:hover, .div-inline-flex:hover {
+    padding: 30px;
 }
