--- a/display-examples/style.css
+++ b/display-examples/style.css
@@ -9,9 +9,8 @@
 body {
     background: beige;
     font-size: 16px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    justify-content: center;
 }
 
 h1 {
@@ -20,14 +19,16 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 0.75px rgba(31, 31, 31, 0.5);
+    padding-top: 8px;
 }
 
-h1, p {
+h2 {
+    margin: auto;
     padding: 4px;
 }
 
-strong {
-    font-family: monospace;
+p {
+    padding: 2px;
 }
 
 a, a:link, a:visited {
@@ -45,23 +46,69 @@ a:hover {
     text-shadow: 1px 2px rgb(139, 96, 15);
 }
 
+hr {
+    margin: 10px 25% 10px 25%;
+    border: 2px solid rgb(207, 147, 35);
+    border-radius: 4px;
+}
+
+strong {
+    font-family: monospace;
+    font-size: 16px;
+}
+
+.definition {
+    width: 50%;
+    margin: auto;
+    font-size: 14px;
+    text-align: justify;
+    line-height: 1.5;
+}
+
+mark {
+    padding: 0.05rem 0.3rem 0.05rem 0.3rem;
+    border-radius: 4px;
+}
+
+.mark-code {
+    background: wheat;
+}
+
+.mark-block {
+    background: tomato;
+}
+
+.mark-flex-row {
+    background: rgb(138, 169, 236);
+}
+
+.mark-flex-column {
+    background: rgb(130, 224, 130);
+}
+
+.mark-grid {
+    background: rgb(163, 130, 224);
+}
+
 /* NAVBAR */
 
 .navbar-container {
-    display: flex;
-    width: fit-content;
+    display: inline-flex;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
     justify-content: center;
-    padding: 10px 6px 10px 6px;
-    border-radius: 5px;
+    padding: 11px 12px 11px 12px;
     background: wheat;
+    border: 1px solid rgb(207, 147, 35);
+    border-radius: 5px;
+    box-shadow: 0px 2px 0px 1px rgb(207, 147, 35);
 }
 
 .navbar-menu {
     float: left;
-    padding: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 /* EXAMPLE CONTAINERS */
@@ -90,10 +137,22 @@ a:hover {
     max-width: 300px;
     height: auto;
     border-radius: 10px;
-} 
+}
+
+.margin-auto {
+    margin: auto;
+}
 
 .div-block {
     background: rgb(194, 106, 106);
+}
+
+.div-block-sized {
+    width: 50%;
+}
+
+.div-block-align-right {
+    margin: 0 0 0 auto;
 }
 
 .div-inline-block {
