--- a/display-examples/style.css
+++ b/display-examples/style.css
@@ -11,6 +11,7 @@ body {
     font-size: 16px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    color: rgba(24, 24, 24, 0.897);
 }
 
 h1 {
@@ -19,12 +20,34 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 0.75px rgba(31, 31, 31, 0.5);
-    padding-top: 8px;
+    padding-top: 12px;
 }
 
 h2 {
     margin: auto;
-    padding: 4px;
+    width: fit-content;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px wheat;
+    border: 6px double wheat;
+    border-radius: 12px;
+}
+
+.header-block {
+    /* color: tomato; */
+    background: tomato;
+}
+
+.header-flex-row {
+    background: 1px 2px rgb(138, 169, 236);
+}
+
+.header-flex-column {
+    background: 1px 2px rgb(130, 224, 130);
+}
+
+.header-column {
+    background: 1px 2px rgb(163, 130, 224);
 }
 
 p {
@@ -32,12 +55,12 @@ p {
 }
 
 a, a:link, a:visited {
-    text-decoration: none;
     padding: 5px 9px 5px 9px;
-    border-radius: 3px;
-    color: black;
+    text-decoration: none;
+    color: rgb(48, 33, 5);
     text-transform: uppercase;
     font-weight: 600;
+    border-radius: 6px;
 }
 
 a:hover {
@@ -49,7 +72,7 @@ a:hover {
 hr {
     margin: 10px 25% 10px 25%;
     border: 2px solid rgb(207, 147, 35);
-    border-radius: 4px;
+    border-radius: 6px;
 }
 
 strong {
@@ -95,31 +118,33 @@ mark {
 .navbar-container {
     display: inline-flex;
     margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 14px;
+    margin-bottom: 28px;
     justify-content: center;
     padding: 11px 12px 11px 12px;
     background: wheat;
     border: 1px solid rgb(207, 147, 35);
-    border-radius: 5px;
+    border-radius: 12px;
     box-shadow: 0px 2px 0px 1px rgb(207, 147, 35);
 }
 
 .navbar-menu {
     float: left;
-    padding-left: 2px;
-    padding-right: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 /* EXAMPLE CONTAINERS */
+.container {
+    border: 4px solid rgb(207, 147, 35);
+    border-radius: 12px;
+    padding: 10px;
+    margin: 10px;
+}
 
 .block-container {
     display: block;
     text-align: center;
-    border: 4px solid rgb(207, 147, 35);
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
 }
 
 .flex-container {
@@ -127,7 +152,7 @@ mark {
     flex-direction: row;
     flex-wrap: wrap;
     border: 4px solid rgb(207, 147, 35);
-    border-radius: 5px;
+    border-radius: 12px;
     padding: 10px;
     margin: 10px;
 }
@@ -136,7 +161,7 @@ mark {
     width: 35%;
     max-width: 300px;
     height: auto;
-    border-radius: 10px;
+    border-radius: 12px;
 }
 
 .margin-auto {
