--- a/display-examples/style.css
+++ b/display-examples/style.css
@@ -1,4 +1,4 @@
-/* Reset */
+/* RESET */
 * {
     margin: 0;
     padding: 0;
@@ -82,6 +82,7 @@ strong {
 
 .definition {
     width: 50%;
+    min-width: 320px;
     margin: auto;
     font-size: 14px;
     text-align: justify;
@@ -129,7 +130,7 @@ mark {
 }
 
 .navbar-menu {
-    float: left;
+    display: inline-flex;
     padding-left: 1px;
     padding-right: 1px;
 }
@@ -196,4 +197,24 @@ mark {
 
 .div-block:hover, .div-inline-block:hover, .div-inline-flex:hover {
     padding: 30px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 475px) {
+    .navbar-container {
+        margin: 14px 5px 28px 5px;
+        justify-content: space-evenly;
+    }
+    .navbar-menu {
+        display: inline-flex;
+        padding: 2px 0px 2px 0px;
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 630px) {
+    hr {
+        margin: 10px auto 10px auto;
+        width: 320px;
+        }
 }
