--- a/style.css
+++ b/style.css
@@ -1,227 +1,55 @@
+
 /* RESET */
 * {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     box-sizing: border-box;
-    list-style-type: none;
 }
 
 body {
-    background: beige;
-    font-size: 16px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    color: rgba(24, 24, 24, 0.897);
+    font-size: 16px;
+    font-family: monospace;
+    color: rgb(24, 24, 24);
+    --pale-color: rgb(241, 241, 241);
+    --shadow-color: rgb(197, 197, 197);
 }
 
-h1 {
-    background: linear-gradient(40deg,green 0%, purple 30%, red 65%, yellow 90%);
-    background-clip: inherit;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 0.75px rgba(31, 31, 31, 0.5);
-    padding-top: 18px;
-    padding-bottom: 6px;
-}
-
-h2 {
-    margin: auto;
-    width: fit-content;
-    padding: 10px 20px 10px 20px;
-    margin-bottom: 20px;
-    margin-top: 30px;
-    text-shadow: 1px 1px 2px wheat;
-    border: 6px double wheat;
-    border-radius: 12px;
-}
-
-.header-block {
-    /* color: tomato; */
-    background: tomato;
-}
-
-.header-flex-row {
-    background: 1px 2px rgb(138, 169, 236);
-}
-
-.header-flex-column {
-    background: 1px 2px rgb(130, 224, 130);
-}
-
-.header-grid {
-    background: 1px 2px rgb(163, 130, 224);
-}
-
-p {
-    padding: 2px;
-}
-
-a, a:link, a:visited {
-    padding: 5px 9px 5px 9px;
+a {
+    padding: 6px 7px 6px 7px;
+    margin: 6px 4px 6px 10px;
+    color: rgb(24, 24, 24);
     text-decoration: none;
-    color: rgb(48, 33, 5);
-    text-transform: uppercase;
-    font-weight: 600;
-    border-radius: 6px;
+    border: 1px dashed var(--shadow-color);
+    border-radius: 12px;
 }
 
 a:hover {
-    color: wheat;
-    background: rgb(207, 147, 35);
-    text-shadow: 1px 2px rgb(139, 96, 15);
+    background: var(--shadow-color);
+    text-shadow: 1px 2px 1px var(--pale-color);
+    font-weight: 600;
 }
 
-hr {
-    margin: 10px 25% 10px 25%;
-    border: 2px solid rgb(207, 147, 35);
-    border-radius: 6px;
-}
-
-strong {
-    font-family: monospace;
-    font-size: 16px;
-}
-
-.definition {
-    width: 50%;
-    min-width: 320px;
-    margin: auto;
-    font-size: 16px;
-    text-align: justify;
-    line-height: 1.5;
-}
-
-mark {
-    padding: 0.05rem 0.3rem 0.05rem 0.3rem;
-    border-radius: 4px;
-}
-
-.mark-code {
-    background: wheat;
-}
-
-.mark-block {
-    background: tomato;
-}
-
-.mark-flex-row {
-    background: rgb(138, 169, 236);
-}
-
-.mark-flex-column {
-    background: rgb(130, 224, 130);
-}
-
-.mark-grid {
-    background: rgb(163, 130, 224);
-}
-
-/* NAVBAR */
-
-.navbar-container {
-    display: inline-flex;
-    margin: auto;
-    margin-top: 14px;
-    margin-bottom: 28px;
-    justify-content: center;
-    padding: 11px 12px 11px 12px;
-    background: wheat;
-    border: 1px solid rgb(207, 147, 35);
-    border-radius: 12px;
-    box-shadow: 0px 2px 0px 1px rgb(207, 147, 35);
-}
-
-.navbar-menu {
-    display: inline-flex;
-    padding-left: 1px;
-    padding-right: 1px;
-}
-
-/* EXAMPLE CONTAINERS */
 .container {
-    border: 4px solid rgb(207, 147, 35);
-    border-radius: 12px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.block-container {
-    display: block;
-    text-align: center;
-}
-
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border: 4px solid rgb(207, 147, 35);
-    border-radius: 12px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.responsive-img {
-    width: 35%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 12px;
-}
-
-.margin-auto {
+    display: grid;
+    position: absolute;
+    text-align: left;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     margin: auto;
+    grid-template-columns: 40px 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: fit-content;
+    padding: 3px 5px 3px 0px;
+    background: var(--pale-color);
+    border: 1px solid var(--shadow-color);
+    box-shadow: 0px 4px var(--shadow-color);
+    border-radius: 12px;
 }
 
-.div-block {
-    background: rgb(194, 106, 106);
-}
-
-.div-block-sized {
-    width: 50%;
-}
-
-.div-block-align-right {
-    margin: 0 0 0 auto;
-}
-
-.div-inline-block {
-    display: inline-block;
-    background: rgb(106, 194, 187);
-}
-
-.div-inline-flex {
-    display: inline-flex;
-    background: rgb(185, 201, 48);
-}
-
-.div-block, .div-inline-block, .div-inline-flex {
-    border: 1px dotted rgb(59, 59, 59);
-}
-
-.div-block:hover, .div-inline-block:hover, .div-inline-flex:hover {
-    padding: 30px;
-}
-
-/* MEDIA QUERIES */
-@media (max-width: 475px) {
-    h1 {
-        font-size: 1.5em;
-    }
-    h2 {
-        font-size: 1.20em;
-    }
-    .navbar-container {
-        margin: 14px 6px 22px 6px;
-        min-width: 325px;
-    }
-    .navbar-menu {
-        padding: 2px -2px 2px -2px;
-        font-size: 15px;
-    }
-}
-
-@media (max-width: 630px) {
-    hr {
-        margin: 10px auto 10px auto;
-        width: 320px;
-        }
+.f-icon {
+    justify-self: right;
+    align-self: center;
+    padding: 0px 2px 0px 0px;
 }
