--- a/container-layout/style.css
+++ b/container-layout/style.css
@@ -6,21 +6,26 @@
     list-style-type: none;
 }
 
-body {
-    background: beige;
-    font-size: 16px;
+:root {
+    --text-color: rgb(26, 26, 26);
+    --fill: rgb(241, 241, 241);
+    --shadow: rgb(190, 190, 190);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     color: rgba(24, 24, 24, 0.897);
 }
 
+body {
+    color: var(--text-color);
+}
+
 h1 {
-    background: wheat;
-    -webkit-text-stroke: 1px rgba(31, 31, 31, 0.5);
-    text-shadow: 0px 2px 1px rgb(207, 147, 35);
+    background: var(--fill);
+    -webkit-text-stroke: 0.02rem var(--fill);
+    text-shadow: 1px 2px 1px var(--shadow);
     padding-top: 18px;
     padding-bottom: 18px;
-    box-shadow: 0px 2px 0px 1px rgb(207, 147, 35);
+    box-shadow: 0px 2px 0px 1px var(--shadow);
 }
 
 h2 {
@@ -30,8 +35,8 @@ h2 {
     margin-bottom: 20px;
     margin-top: 20px;
     font-size: 1em;
-    text-shadow: 1px 1px 2px wheat;
-    border: 6px double wheat;
+    text-shadow: 1px 1px 2px var(--fill);
+    border: 6px double var(--fill);
     border-radius: 12px;
 }
 
@@ -64,14 +69,14 @@ a, a:link, a:visited {
 }
 
 a:hover {
-    color: wheat;
-    background: rgb(207, 147, 35);
-    text-shadow: 1px 2px rgb(139, 96, 15);
+    color: var(--fil);
+    background: var(--shadow);
+    text-shadow: 1px 2px var(--fill);
 }
 
 hr {
     margin: 10px 25% 10px 25%;
-    border: 2px solid rgb(207, 147, 35);
+    border: 2px solid var(--shadow);
     border-radius: 6px;
 }
 
@@ -87,7 +92,7 @@ strong {
     font-size: 16px;
     text-align: justify;
     line-height: 1.6;
-    background: wheat;
+    background: var(--fill);
     border-radius: 12px;
     padding: 10px 15px 10px 15px;
 }
@@ -98,7 +103,7 @@ mark {
 }
 
 .mark-code {
-    background: wheat;
+    background: var(--shadow);
 }
 
 .mark-block {
@@ -126,10 +131,10 @@ mark {
     margin-bottom: 28px;
     justify-content: center;
     padding: 11px 12px 11px 12px;
-    background: wheat;
-    border: 1px solid rgb(207, 147, 35);
+    background: var(--fill);
+    border: 1px solid var(--shadow);
     border-radius: 12px;
-    box-shadow: 0px 2px 0px 1px rgb(207, 147, 35);
+    box-shadow: 0px 2px 0px 1px var(--shadow);
 }
 
 .navbar-menu {
