--- a/container-layout/style.css
+++ b/container-layout/style.css
@@ -7,10 +7,14 @@
 }
 
 :root {
-    --text-color: rgb(26, 26, 26);
-    --fill: rgb(241, 241, 241);
-    --shadow: rgb(190, 190, 190);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    --text-color: rgb(34, 34, 34);
+    --pale-text-color: rgb(78, 78, 78);
+    --fill: rgb(251, 251, 251);
+    --shadow: rgb(224, 224, 224);
+    --block-color: tomato;
+    --flex-color: rgb(138, 169, 236);
+    --grid-color: rgb(163, 130, 224);
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     color: rgba(24, 24, 24, 0.897);
 }
@@ -20,39 +24,43 @@ body {
 }
 
 h1 {
+    color: var(--pale-text-color);
     background: var(--fill);
     -webkit-text-stroke: 0.02rem var(--fill);
     text-shadow: 1px 2px 1px var(--shadow);
     padding-top: 18px;
-    padding-bottom: 18px;
+    padding-bottom: 20px;
     box-shadow: 0px 2px 0px 1px var(--shadow);
 }
 
 h2 {
     margin: auto;
-    width: fit-content;
-    padding: 10px 20px 10px 20px;
+    text-align: center;
+    color: white;
+    font-size: 1rem;
+    width: 200px;
+    padding: 10px 16px 10px 20px;
     margin-bottom: 20px;
     margin-top: 20px;
-    font-size: 1em;
-    text-shadow: 1px 1px 2px var(--fill);
-    border: 6px double var(--fill);
+    letter-spacing: 5px;
+    text-shadow: 0px 1px 1px var(--pale-text-color);
+    border: 2px dotted var(--fill);
     border-radius: 12px;
 }
 
 .header-block {
-    box-shadow: 0px 2px 0px 1px tomato;
-    background: tomato;
+    box-shadow: 0px 2px 0px 1px var(--block-color);
+    background: var(--block-color);
 }
 
 .header-flex-row {
-    box-shadow: 0px 2px 0px 1px rgb(138, 169, 236);
-    background: 1px 2px rgb(138, 169, 236);
+    box-shadow: 0px 2px 0px 1px var(--flex-color);
+    background: 1px 2px var(--flex-color);
 }
 
 .header-grid {
-    box-shadow: 0px 2px 0px 1px rgb(163, 130, 224);
-    background: 1px 2px rgb(163, 130, 224);
+    box-shadow: 0px 2px 0px 1px var(--grid-color);
+    background: 1px 2px var(--grid-color);
 }
 
 p {
@@ -60,22 +68,21 @@ p {
 }
 
 a, a:link, a:visited {
-    padding: 5px 9px 5px 9px;
+    padding: 8px 8px 6px 8px;
     text-decoration: none;
-    color: rgb(48, 33, 5);
+    color: var(--pale-text-color);
     text-transform: uppercase;
-    font-weight: 600;
+    font-size: 1rem;
     border-radius: 6px;
 }
 
 a:hover {
-    color: var(--fil);
     background: var(--shadow);
     text-shadow: 1px 2px var(--fill);
 }
 
 hr {
-    margin: 10px 25% 10px 25%;
+    margin: 10px 30% 10px 30%;
     border: 2px solid var(--shadow);
     border-radius: 6px;
 }
@@ -86,12 +93,12 @@ strong {
 }
 
 .definition {
-    width: 50%;
+    width: 40%;
     min-width: 320px;
     margin: auto;
     font-size: 16px;
     text-align: justify;
-    line-height: 1.6;
+    line-height: 1.7;
     background: var(--fill);
     border-radius: 12px;
     padding: 10px 15px 10px 15px;
@@ -127,10 +134,10 @@ mark {
 .navbar-container {
     display: inline-flex;
     margin: auto;
-    margin-top: 14px;
+    margin-top: -12px;
     margin-bottom: 28px;
     justify-content: center;
-    padding: 11px 12px 11px 12px;
+    padding: 9px 12px 9px 12px;
     background: var(--fill);
     border: 1px solid var(--shadow);
     border-radius: 12px;
@@ -145,7 +152,7 @@ mark {
 
 /* EXAMPLE CONTAINERS */
 .container {
-    border: 4px solid rgb(207, 147, 35);
+    border: 4px solid var(--shadow);
     border-radius: 12px;
     padding: 10px;
     margin: 10px;
@@ -160,7 +167,6 @@ mark {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 4px solid rgb(207, 147, 35);
     border-radius: 12px;
     padding: 10px;
     margin: 10px;
@@ -210,19 +216,25 @@ mark {
 /* MEDIA QUERIES */
 @media (max-width: 475px) {
     h1 {
-        font-size: 1.5em;
+        font-size: 1.25em;
     }
+
+    a, a:link, a:visited {
+        padding: 4px 6px 4px 6px;
+        font-size: 0.9rem;
+    }
+    
     .navbar-container {
-        margin: 14px 6px 22px 6px;
-        min-width: 325px;
+        margin-left: 6px;
+        margin-right: 6px;
+        /* min-width: 325px; */
     }
     .navbar-menu {
-        padding: 2px -2px 2px -2px;
-        font-size: 15px;
+        padding: 0px;
     }
 }
 
-@media (max-width: 630px) {
+@media (max-width: 850px) {
     hr {
         margin: 10px auto 10px auto;
         width: 320px;
