--- a/grid/style.css
+++ b/grid/style.css
@@ -4,47 +4,158 @@
     box-sizing: border-box;
 }
 
-main {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: 
-        "box1 box2"
-        "box3 box3";
-    justify-items: center;
+:root {
+    --main-cl: rgb(103, 103, 230);
+    --secondary-cl: rgb(179, 46, 179);
+    --gradient: linear-gradient(60deg, var(--main-cl), 
+    var(--secondary-cl));
+    --max-width: 1400px;
+    font-family: monospace;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    color: rgba(255, 255, 255, 0.877);
+    margin-top: 2em;
+    margin-bottom: 1.5em;
+    text-shadow: 0.25em 0.25em var(--secondary-cl);
+}
+
+header a {
+    color: rgba(255, 255, 255, 0.877);
+    text-shadow: 0.25em 0.25em var(--secondary-cl);
+    text-decoration: none;
+    font-size: 1.20rem;
+    padding: 0.25em 1em;
+    text-transform: uppercase;
+}
+
+header a:hover {
+    font-weight: bold;
+    background: var(--gradient);
+    border-radius: 0.65rem;
+}
+/* 
+#site-title {
+    margin-left: 0.3em;
+} */
+
+#navbar-container {
+    display: flex;
+    align-self: flex-end;
+    justify-content: flex-end;
+}
+
+
+body {
+    color: rgb(56, 16, 56);
+    margin: auto;
+    max-width: var(--max-width);
+    background: var(--gradient);
+}
+
+h1 {
+    font-size: 6vmin;
+}
+
+
+.site-title__p {
+    padding: 0.25em;
+}
+
+
+main {
+    padding: 1.25rem;
+    display: grid;
+    grid-template: 25% repeat(2, 1.5fr);
+    grid-template-areas: 
+    "header header"
+    "advert content"
+    "advert content"
+    "footer footer"
+    "copyright copyright";
+    grid-gap: 1em 1.25em;
+    background-color: rgba(247, 247, 247, 0.329);
+    box-shadow: 0.025em 0.025em 1em 0.15em rgba(48, 48, 48, 0.548);
+}
+
+main, header {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+main, .box {
+    border-radius: 0.65rem;
 }
 
 .box {
-    border: 2px solid blue;
+    padding: 2.25em 2.5em;
 }
 
-.box1 {
+.box:hover {
+    box-shadow: 0 0.20em 0.40em 0.10em rgba(48, 48, 48, 0.548);
+    transform: translate(0, -0.25em);
+    background: var(--gradient);
+    color: rgba(255, 255, 255, 0.877);
+    text-shadow: 0.25em 0.25em var(--secondary-cl);
+}
+
+.header {
+    grid-area: header;
     background: lightcoral;
-    grid-area: box1;
 }
 
-.box1:hover {
-    display: flex;
-    flex-direction: column;
-    justify-self: stretch;
-    align-self: stretch;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1%;
+.header h2 {
+ text-transform: uppercase;
 }
 
-.box2 {
+.advert {
+    grid-area: advert; 
     background: lightblue;
-    grid-area: box2;
-}
-.box3 {
-    background: lightgreen;
-    grid-area: box3;
 }
 
-.box4 {
+.content {
+    grid-area: content;
     background: lightgreen;
-    grid-area: box;
+}
+
+.footer {
+    grid-area: footer;
+    background: rgb(246, 248, 135);
+}
+
+.copyright {
+    justify-self: right;
+}
+
+@media (max-width: 600px) {
+    main {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 0.5fr 3fr 0.5fr;
+        grid-template-areas: 
+            "header"
+            "advert" 
+            "content"
+            "footer";
+        }
+
+    #navbar-container {
+        flex-direction: column;
+        text-align: right;
+    }
+}
+
+@media (min-width: 1200px) {
+    main {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 0.5fr 3fr 1fr;
+        grid-template-areas: 
+            "header"
+            "advert" 
+            "content"
+            "footer";
+        }
 }
