--- a/grid/style.css
+++ b/grid/style.css
@@ -89,13 +89,13 @@ p {
 
 
 main {
-    padding: 1.25rem;
+    padding: 1.35em;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 
     "headline headline";
     grid-gap: 1em 1.25em;
-    background-color: rgba(247, 247, 247, 0.329);
+    background-color: rgba(247, 247, 247, 0.212);
     box-shadow: 0.025em 0.025em 1em 0.15em rgba(48, 48, 48, 0.548);
 }
 
@@ -215,10 +215,17 @@ footer {
 
 @media (max-width: 540px) {
 
+    main, header, footer {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
     main {
+        padding: 0.75em;
         grid-template-columns: 1fr;
         grid-template-areas: 
         "headline";
+        grid-gap: 0.7em 0.7em;
 }
 
     header {
@@ -239,9 +246,13 @@ footer {
     #navbar-container {
         flex-direction: row;
         margin: auto;
-        width: 100%;
+        width: 90%;
         justify-content: space-evenly;
     }
+
+    .box {
+        padding: 1.5em 1.35em;
+        }
 
     header a {
         margin-top: 0.25em;
