--- a/blending-mode/style.css
+++ b/blending-mode/style.css
@@ -5,22 +5,30 @@
 }
 
 :root {
-    --accent-clr: rgba(255, 255, 255, 0.925);
+    --accent-clr: rgba(255, 255, 255, 0.959);
 }
 
 body {
+    height: 100%;
+    width: auto;
+    background-color: red;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
-    width: 100vw;
 
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: red;
     background-image: url(https://images.pexels.com/photos/2802686/pexels-photo-2802686.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
     background-size: cover;
+    background-position: center center;
     background-blend-mode: screen;
 }
 
 h1 {
+    font-size: 3vmax;
     text-align: center;
 }
 
@@ -30,18 +38,21 @@ p {
     font-size: 1.1rem;
 }
 
+
 .wrapper {
-    height: 100vh;
+    height: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    outline: 4px solid green;
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    width: 60vw;
+    width: 83vw;
+    max-width: 720px;
     bottom: 11em;
     padding: 1.35em;
     border: 4px solid var(--accent-clr);
@@ -53,17 +64,18 @@ p {
 }
 
 .btn {
-    width: 60vw;
-    max-width: 320px;
+    width: 45vw;
+    max-width: 290px;
+    min-width: fit-content;
     max-height: 4.5em;
     position: relative;
     bottom: 8em;
-    padding: 1.35em;
+    padding: 1em;
     border: 4px solid var(--accent-clr);
     border-radius: 3em;
     text-transform: uppercase;
     text-align: center;
-    font-size: 1.15rem;
+    font-size: 1.1rem;
     font-weight: 800;
     letter-spacing: 0.1em;
 }
@@ -75,9 +87,44 @@ p {
     cursor: pointer;
 }
 
+footer {
+    font-size: 0.8rem;
+    
+}
+
 @keyframes button-hover {
     100% {
         background-color: var(--accent-clr);
-        color: rgba(0, 0, 0, 0.897);
+        color: rgba(36, 36, 36, 0.897);
     }
+}
+
+@media (min-width: 1300px) {
+    body {
+        background-color: red;
+        background-image: url(https://images.pexels.com/photos/2802686/pexels-photo-2802686.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
+        background-size: 85% auto;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-blend-mode: screen;
+    }
+
+}
+
+
+@media (max-width: 400px) {
+    h1 {
+        text-transform: uppercase;
+    }
+
+    p {
+        line-height: 1.2em;
+        text-align: center;
+    }
+
+    .container {
+        width: 100vw;
+        border: none;
+    }
+
 }
