--- a/blending-mode/style.css
+++ b/blending-mode/style.css
@@ -1,25 +1,23 @@
+/* RESET */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* GLOBAL CSS */
 :root {
     --accent-clr: rgba(255, 255, 255, 0.959);
 }
 
 body {
-    height: 100%;
-    width: auto;
-    background-color: red;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: red;
     background-image: url(https://images.pexels.com/photos/2802686/pexels-photo-2802686.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
     background-size: cover;
@@ -38,7 +36,7 @@ p {
     font-size: 1.1rem;
 }
 
-
+/* COMPONENTS */
 .wrapper {
     height: 95vh;
     display: flex;
@@ -54,9 +52,9 @@ p {
     width: 83vw;
     max-width: 720px;
     bottom: 11em;
-    padding: 1.35em;
+    padding: 1.4em;
     border: 4px solid var(--accent-clr);
-    border-radius: 3em;
+    border-radius: 1em;
 }
 
 .container h1 + p {
@@ -65,7 +63,7 @@ p {
 
 .btn {
     width: 45vw;
-    max-width: 290px;
+    max-width: 240px;
     min-width: fit-content;
     max-height: 4.5em;
     position: relative;
@@ -89,16 +87,17 @@ p {
 
 footer {
     font-size: 0.8rem;
-    
-}
+    }
 
+/* ANIMATION */
 @keyframes button-hover {
     100% {
         background-color: var(--accent-clr);
-        color: rgba(36, 36, 36, 0.897);
+        color: red;
     }
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 1300px) {
     body {
         background-color: red;
@@ -110,7 +109,6 @@ footer {
     }
 
 }
-
 
 @media (max-width: 400px) {
     h1 {
@@ -125,6 +123,32 @@ footer {
     .container {
         width: 100vw;
         border: none;
+    }
+
+}
+
+@media (max-width: 275px) {
+    h1 {
+        font-size: 8vmin;
+    }
+
+    p {
+        font-size: 0.9rem;
+    }
+
+    .container {
+        bottom: 3em;
+        padding: 1em;
+    }
+
+    .btn {
+        width: 35vw;
+        bottom: 3em;
+        font-size: 0.75rem;
+    }
+
+    footer {
+        font-size: 0.7rem;
     }
 
 }
