--- a/regex/style.css
+++ b/regex/style.css
@@ -27,7 +27,7 @@ form{
 input{
     display: block;
     padding: 8px 16px;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin: 25px auto 10px;
     width: 100%;
     box-sizing: border-box;
@@ -35,7 +35,30 @@ input{
     border: 3px solid #ccc;
     outline: none !important;
 }
-/* 
-::placeholder {
-    font-size: 1.5rem;
-} */
+
+/* Validation style */
+
+input.valid {
+    border-color: lightgreen;
+}
+
+input.invalid {
+    border-color: red;
+}
+
+input + p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9rem;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 10px;
+    color: orange;
+    opacity: 0;
+    height: 0;
+}
+
+input.invalid + p {
+    opacity: 1;
+    height: auto;
+    margin-bottom: 20px;
+}
