Clean up code de débutant

--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -4,13 +4,24 @@
     box-sizing: border-box;
 }
 
+:root {
+    font-size: 14px;
+}
+
 .gallery {
+    padding: 1em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1em;
 }
 
 .gallery img {
     width: 100%;
+    border-radius: 0.5em;
+}
+
+.gallery img:hover {
+    box-shadow: 0.2em 0.2em 0.45em rgba(14, 14, 14, 0.281);
+    filter: brightness(0.8);
+    transition: filter 0.2s, box-shadow 0.1s;
 }
