--- a/blending-mode/style.css
+++ b/blending-mode/style.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
     background-color: red;
     background-image: url(https://images.pexels.com/photos/2802686/pexels-photo-2802686.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
     background-size: cover;
@@ -28,6 +29,7 @@ body {
 h1 {
     font-size: 3vmax;
     text-align: center;
+    margin-bottom: 0.5em;
 }
 
 p {
@@ -36,29 +38,34 @@ p {
     font-size: 1.1rem;
 }
 
+footer {
+    font-size: 0.8rem;
+}
+
 /* COMPONENTS */
 .wrapper {
+    padding-top: 8vh;
     height: 95vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 1em;
     align-items: center;
 }
 
+.logo {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
+    font-weight: bold;
+}
+
 .container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
     width: 83vw;
     max-width: 720px;
-    bottom: 11em;
+    display: flex;
+    flex-direction: column;
     padding: 1.4em;
     border: 4px solid var(--accent-clr);
     border-radius: 1em;
-}
-
-.container h1 + p {
-    margin-top: 1.2em;
 }
 
 .btn {
@@ -66,8 +73,6 @@ p {
     max-width: 240px;
     min-width: fit-content;
     max-height: 4.5em;
-    position: relative;
-    bottom: 8em;
     padding: 1em;
     border: 4px solid var(--accent-clr);
     border-radius: 3em;
@@ -84,10 +89,6 @@ p {
     animation-duration: 250ms;
     cursor: pointer;
 }
-
-footer {
-    font-size: 0.8rem;
-    }
 
 /* ANIMATION */
 @keyframes button-hover {
